--- a/src/Coalesce.Starter.Web/Coalesce/Originals/package.json
+++ b/src/Coalesce.Starter.Web/Coalesce/Originals/package.json
@@ -3,12 +3,15 @@
   "name": "ASP.NET",
   "private": true,
   "devDependencies": {
-    "gulp": "3.9.0",
-    "gulp-rename": "1.2.2",
-    "gulp-sourcemaps": "1.6.0",
-    "gulp-flatten": "0.2.0",
-    "gulp-sass": "2.1.0",
-    "gulp-typescript": "2.9.2",
-    "rimraf": "2.4.3"
+    "gulp": "^3.9.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^2.6.0",
+    "gulp-flatten": "^0.3.1",
+    "gulp-sass": "^3.1.0",
+    "gulp-typescript": "^3.1.6",
+    "gulp-shell": "^0.5.2",
+    "typescript": "~2.3.2",
+    "run-sequence": "^1.2.2",
+    "rimraf": "^2.4.3"
   }
 }
