--- a/src/Coalesce.Starter.Data/Coalesce.Starter.Data.csproj
+++ b/src/Coalesce.Starter.Data/Coalesce.Starter.Data.csproj
@@ -1,44 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Description>Coalesce Startup Data Library</Description>
-    <VersionPrefix>2.0.0</VersionPrefix>
-    <Authors>IntelliTect</Authors>
-    
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <!-- All these frameworks are included for testing code generation.
-    Override the used framework by specifying (framework: "tfm") in coalesce.json. -->
-    <!--
-      IMPORTANT NOTE REGARDING ENTITYFRAMEWORK MIGRATIONS (Ctrl+f: EFCore, EF Core):
-      All EF commands need to be ran with - -framework netcoreapp2.0. E.g.:
-      dotnet ef database update - -framework netcoreapp2.0 (no space between the dashes; space is there because double dash is illegal in XML comments).
-    -->
-    <TargetFrameworks>netstandard2.0;netcoreapp2.0;net462</TargetFrameworks>
-    <AssemblyName>Coalesce.Starter.Data</AssemblyName>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
     <OutputType>Exe</OutputType>
-    <PackageId>Coalesce.Starter.Data</PackageId>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
-    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\submodules\Coalesce\src\IntelliTect.Coalesce\IntelliTect.Coalesce.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.0" />
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net46' ">
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.1" />
+    <PackageReference Include="IntelliTect.Coalesce" Version="2.0.0-alpha-113" />
   </ItemGroup>
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
 
 </Project>
