Update typings to pull from npm; updated to latest coalesce.

--- a/src/Coalesce.Starter.Web/tsconfig.json
+++ b/src/Coalesce.Starter.Web/tsconfig.json
@@ -5,14 +5,10 @@
     "noEmitOnError": true,
     "removeComments": false,
     "sourceMap": true,
-    "module": "system",
-    "target": "es5"
+    "target": "es5",
+    "module": "system"
   },
-  "exclude": [
-    "bower_components",
-    "node_modules",
-    "wwwroot",
-    "obj",
-    "bin"
+  "include": [
+    "Scripts"
   ]
 }
