--- a/src/Coalesce.Starter.Web/package.json
+++ b/src/Coalesce.Starter.Web/package.json
@@ -1,17 +1,25 @@
 {
   "version": "1.0.0",
-  "name": "ASP.NET",
+  "name": "Coalesce.Starter",
   "private": true,
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^2.6.0",
-    "gulp-flatten": "^0.3.1",
-    "gulp-sass": "^3.1.0",
-    "gulp-typescript": "^3.1.6",
-    "typescript": "~2.3.2",
+    "@types/bootstrap": "3.3.36",
+    "@types/bootstrap.v3.datetimepicker": "4.17.46",
+    "@types/jquery": "2.0.48",
+    "@types/knockout": "3.4.47",
+    "@types/knockout.validation": "0.0.36",
+    "@types/select2": "4.0.41",
+    "@types/moment": "2.11.29",
     "del": "3.0.0",
+    "gulp": "^3.9.1",
+    "gulp-flatten": "^0.3.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
     "gulp-shell": "^0.5.2",
-    "gulp-util": "3.0.7"
+    "gulp-sourcemaps": "^2.6.0",
+    "gulp-typescript": "^3.1.6",
+    "gulp-util": "3.0.7",
+    "moment": "^2.20.1",
+    "typescript": "~2.3.2"
   }
 }
