--- a/src/Coalesce.Starter.Web/package.json
+++ b/src/Coalesce.Starter.Web/package.json
@@ -1,9 +1,9 @@
 {
   "version": "1.0.0",
-  "name": "Coalesce.Starter",
+  "name": "coalesce.starter",
   "private": true,
   "devDependencies": {
-    "@types/bootstrap": "3.3.36",
+    "@types/bootstrap": "3.3.39",
     "@types/bootstrap.v3.datetimepicker": "4.17.46",
     "@types/jquery": "2.0.48",
     "@types/knockout": "3.4.47",
@@ -20,6 +20,8 @@
     "gulp-typescript": "^3.1.6",
     "gulp-util": "3.0.7",
     "moment": "^2.20.1",
-    "typescript": "~2.3.2"
+    "typescript": "~2.3.2",
+    "bootstrap-sass": "3.3.7",
+    "bootswatch": "3.3.7"
   }
 }
