--- a/src/Coalesce.Starter.Web/package.json
+++ b/src/Coalesce.Starter.Web/package.json
@@ -2,6 +2,18 @@
   "version": "1.0.0",
   "name": "coalesce.starter",
   "private": true,
+  "dependencies": {
+    "moment": "^2.20.1",
+    "bootswatch": "3.3.7",
+    "knockout": "3.4.2",
+    "knockout.validation": "2.0.3",
+    "select2": "4.0.5",
+    "jquery": "2.2.4",
+    "components-font-awesome": "4.7.0",
+    "eonasdan-bootstrap-datetimepicker": "4.17.47",
+    "select2-bootstrap-theme": "0.1.0-beta.10",
+    "bootstrap-sass": "3.3.7"
+  }, 
   "devDependencies": {
     "@types/bootstrap": "3.3.39",
     "@types/bootstrap.v3.datetimepicker": "4.17.46",
@@ -19,15 +31,6 @@
     "gulp-sourcemaps": "^2.6.0",
     "gulp-typescript": "^3.1.6",
     "gulp-util": "3.0.7",
-    "moment": "^2.20.1",
-    "typescript": "~2.3.2",
-    "bootstrap-sass": "3.3.7",
-    "bootswatch": "3.3.7",
-    "knockout": "3.4.2",
-    "knockout.validation": "2.0.3",
-    "select2": "4.0.5",
-    "jquery": "2.2.4",
-    "components-font-awesome": "4.7.0",
-    "eonasdan-bootstrap-datetimepicker": "4.17.47"
+    "typescript": "~2.3.2"
   }
 }
