--- a/src/Coalesce.Starter.Data/Coalesce.Starter.Data.csproj
+++ b/src/Coalesce.Starter.Data/Coalesce.Starter.Data.csproj
@@ -9,7 +9,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.2" />
-    <PackageReference Include="IntelliTect.Coalesce" Version="2.0.0-alpha-272" />
+    <PackageReference Include="IntelliTect.Coalesce" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
