--- a/src/Coalesce.Starter.Web/Coalesce.Starter.Web.csproj
+++ b/src/Coalesce.Starter.Web/Coalesce.Starter.Web.csproj
@@ -20,10 +20,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
-    <PackageReference Include="IntelliTect.Coalesce.Knockout" Version="2.0.0-alpha-272" />
+    <PackageReference Include="IntelliTect.Coalesce.Knockout" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <DotNetCliToolReference Include="IntelliTect.Coalesce.Tools" Version="2.0.0-alpha-272" />
+    <DotNetCliToolReference Include="IntelliTect.Coalesce.Tools" Version="2.0.0" />
   </ItemGroup>  
 </Project>
